--- a/workspaces/core/Cargo.toml
+++ b/workspaces/core/Cargo.toml
@@ -3,13 +3,14 @@ name = "core"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "core"
+
 [dependencies]
-anyhow = "^1.0.80"
+anyhow = "^1.0.81"
 serde_json = "^1.0.114"
 serde = { version = "^1.0.197", features = ["derive"] }
 bs58 = "^0.5.0"
-num-bigint = { version = "0.4.4", features = ["rand"] }
+num-bigint = "^0.4.4"
 num-traits = "^0.2.18"
-k256 = "0.13.3"
-rand = "0.8.5"
-sha256 = "1.5.0"
+k256 = "^0.13.3"
