--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,17 +1,17 @@
-#[build]
-#target = "xtensa-esp32s3-espidf"
-#
-#[target.xtensa-esp32s3-espidf]
-#linker = "ldproxy"
-#runner = "espflash flash --monitor"
-#rustflags = ["--cfg", "espidf_time64"]
-#
-#[unstable]
-#build-std = ["std", "panic_abort"]
-#
-#[env]
-#MCU = "esp32s3"
-#ESP_IDF_VERSION = "v5.1.2"
-#
-## https://github.com/esp-rs/esp-idf-template/issues/174
-#CRATE_CC_NO_DEFAULTS = "1"
+[build]
+target = "xtensa-esp32s3-espidf"
+
+[target.xtensa-esp32s3-espidf]
+linker = "ldproxy"
+runner = "espflash flash --monitor"
+rustflags = ["--cfg", "espidf_time64"]
+
+[unstable]
+build-std = ["std", "panic_abort"]
+
+[env]
+MCU = "esp32s3"
+ESP_IDF_VERSION = "v5.1.2"
+
+# https://github.com/esp-rs/esp-idf-template/issues/174
+CRATE_CC_NO_DEFAULTS = "1"
