--- a/workspaces/desktop/Cargo.toml
+++ b/workspaces/desktop/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-core = { path = "../core" }
+shared = { path = "../shared" }
 anyhow = "^1.0.81"
 rand = "0.8.5"
 bitcoin = "^0.31.1"
