--- a/workspaces/shared/Cargo.toml
+++ b/workspaces/shared/Cargo.toml
@@ -1,10 +1,7 @@
 [package]
-name = "core"
+name = "shared"
 version = "0.1.0"
 edition = "2021"
-
-[lib]
-name = "core"
 
 [dependencies]
 anyhow = "^1.0.81"
@@ -14,3 +11,4 @@ bs58 = "^0.5.0"
 num-bigint = "^0.4.4"
 num-traits = "^0.2.18"
 k256 = "^0.13.3"
+embedded-hal = { version = "^0.2.7", features = ["unproven"] }
