--- a/workspaces/desktop/Cargo.toml
+++ b/workspaces/desktop/Cargo.toml
@@ -6,6 +6,5 @@ edition = "2021"
 [dependencies]
 shared = { path = "../shared" }
 anyhow = "^1.0.81"
-rand = "0.8.5"
+rand = "^0.8.5"
 bitcoin = "^0.31.1"
-rayon = "1.9.0"
