--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "desktop"
+name = "puzzle-solver"
 version = "0.1.0"
 edition = "2021"
 
@@ -16,6 +16,7 @@ k256 = { version = "^0.14.0-pre.0", features = ["precomputed-tables"] }
 rayon = "1.10.0"
 human_format = "1.1.0"
 cudarc = { version = "0.11.8", features = ["cuda-12050"] }
+clap = { version = "4.5.13", features = ["derive"] }
 
 [build-dependencies]
 bindgen_cuda = "0.1.5"
