--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "puzzle-solver"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 [dependencies]
@@ -13,10 +13,15 @@ bs58 = "^0.5.1"
 num-bigint = "^0.4.6"
 num-traits = "^0.2.19"
 k256 = { version = "^0.14.0-pre.0", features = ["precomputed-tables"] }
-rayon = "1.10.0"
 human_format = "1.1.0"
-cudarc = { version = "0.11.8", features = ["cuda-12050"] }
 clap = { version = "4.5.13", features = ["derive"] }
+cudarc = { version = "0.11.8", features = ["cuda-12050"], optional = true }
 
 [build-dependencies]
-bindgen_cuda = "0.1.5"
+bindgen_cuda = { version = "0.1.5", optional = true }
+
+[features]
+cuda = [
+    "cudarc",
+    "bindgen_cuda"
+]
